--- a/usb-book/tesis.tex
+++ b/usb-book/tesis.tex
@@ -105,7 +105,7 @@
     % list of keywords
     morekeywords={
         export, import, as, open, reopen, closed, with,
-        where, let, in,
+        where, let, in, case, of,
         forall, exists, select,
         behaviour, on, defines, is, scope,
         operator, prefix, postfix, infixL, infixR, infixN
