Added more information to the lexer part

--- a/usb-book/bibliografia.bib
+++ b/usb-book/bibliografia.bib
@@ -55,3 +55,13 @@
     urldate = {2016-02-04},
     howpublised = {\url{http://wiki.portal.chalmers.se/agda/pmwiki.php}}
 }
+
+@online{haskell,
+    author = {Paul Hudak and Simon Peyton Jones and Philip Wadler and
+        Brian Boutel and Jon Fairbairn and Joseph Fasel and María M Guzmán and
+        Kevin Hammond and John Hughes and Thomas Johnsson},
+    title = {Haskell},
+    year = {1990},
+    url = {https://www.haskell.org/},
+    urldate = {2016-02-06}
+}
