Fixed some titles and added the Alex reference

--- a/usb-book/bibliografia.bib
+++ b/usb-book/bibliografia.bib
@@ -28,6 +28,26 @@
     howpublised = {\url{https://github.com/ghc/ghc}}
 }
 
+@software{alex,
+    author = {Simon Marlow and Chris Dornan},
+    title = {Alex},
+    version = {3.1.7},
+    year = {1995},
+    url = {https://www.haskell.org/alex/},
+    urldate = {2016-02-07},
+    howpublised = {\url{http://hackage.haskell.org/package/alex}}
+}
+
+@software{happy,
+    author = {Simon Marlow and Andy Gill},
+    title = {Happy},
+    version = {1.19.5},
+    year = {1997},
+    url = {https://www.haskell.org/happy/},
+    urldate = {2016-02-07},
+    howpublised = {\url{http://hackage.haskell.org/package/happy}}
+}
+
 @software{megaparsec,
     author = {Mark Karpov},
     title = {Megaparsec},
