--- a/usb-book/partes/capitulo4.tex
+++ b/usb-book/partes/capitulo4.tex
@@ -208,7 +208,7 @@ En un principio se consideró usar la convención de Haskell, que los constructo
 Pero esta idea tenía algunos problemas, por ejemplo, los identificadores que comenzaran con símbolos y no letras, ¿a qué clase pertenecerían?, además debemos recordar que con tipos dependientes, los tipos son expresiones como cualquier otra, por lo que una distinción sintáctica entre el \emph{uso} de tipos y valores no era conveniente. Finalmente decidimos que no habrá diferencia semántica entre identificadores que comiencen con mayúscula o minúscula.
 \end{designfr}
 
-\section{Cuantificadores, parámetros y argumentos implícitos}
+\section{El cuantificador universal, parámetros y argumentos implícitos}
 
 \begin{designfr}
 Como se busca un lenguaje explícito, todo identificador que se utilice en una expresión, debe estar previamente definido con un tipo acompañante, tomando inspiración de otros lenguajes con tipos dependientes llegamos a la idea de tener dos secciones de la firma de una función, la parte \emph{implícita}, que es el cuantificador universal; y la parte \emph{explícita}:
@@ -249,7 +249,11 @@ compose : forall a:Type, b:Type, c:Type . (b -> c) -> (a -> b) -> a -> c
 
 Ahora la definición se asemeja mucho más a un cuantificador, haciendo más explícito su uso, y además podemos acceder a todas las variables declaradas y especificarlas.
 
-Se consideró usar la palabra \inlinecode{product} en vez de \inlinecode{forall}, pero se decidió ir por una referencia directa a lógica simbólica, aunque estos se consideren los tipos producto. De igual forma, se definen los tipos existenciales con la palabra \inlinecode{exists}, aunque se consideró la palabra \inlinecode{sum}:
+Se consideró usar la palabra \inlinecode{product} en vez de \inlinecode{forall}, pero se decidió ir por una referencia directa a lógica simbólica, aunque estos se consideren los tipos producto.
+
+\section{El cuantificador existencial}
+
+De igual forma, se definen los tipos existenciales con la palabra \inlinecode{exists}, aunque se consideró la palabra \inlinecode{sum}:
 
 \begin{anglercode}
 vfilter : forall t:Type, n:Nat . (t -> Bool) -> Vect n t -> exists m:Nat . Vect m t
@@ -326,19 +330,21 @@ const x _ = x
 \section{Escribiendo un \emph{lexer} con inspiración}
 
 \begin{designfr}
-El lexer de nuestro lenguaje no sería el típico caso de separar tokens e ignorar comentarios, tenemos que obtener la información de alcances dependiendo de la indentación, caracteres literales, cadenas de caracteres, números literales e incluimos anidación de comentarios. Los tabuladores (\emph{tabs}) son equivalentes a cuatro (4) espacios.
+El analizador léxico (\emph{lexer}) de nuestro lenguaje no sería el típico caso de separar tokens e ignorar comentarios, tenemos que obtener la información de alcances dependiendo de la indentación, caracteres literales, cadenas de caracteres, números literales e incluimos anidación de comentarios. Los tabuladores (\emph{tabs}) son equivalentes a cuatro (4) espacios.
 \end{designfr}
 
 \begin{investigationfr}
-Para lograr esto, nos fijamos en lenguajes que también usen indentación para definir alcances, conseguimos un parser de Python escrito en Haskell \cite{python-parser} que ayudó con algunas nociones de cómo lograr esto, pero el lexer de GHC \cite{ghc} fue la mayor influencia para la escritura del lexer.
+Para lograr esto, nos fijamos en lenguajes que también usen indentación para definir alcances, conseguimos un analizador sintáctico de Python escrito en Haskell \cite{python-parser} que ayudó con algunas nociones de cómo lograr esto, pero el analizador léxico de GHC \cite{ghc} fue la mayor influencia para la escritura del analizador léxico.
 \end{investigationfr}
 
 \begin{implementationfr}
-Se listan identificadores reservados para que reconozca el lexer y se especifica algunos que introducen un nuevo alcance, éstos \emph{esperan} una indentación mayor a la usada anteriormente y de ahí en adelante se considera el mismo alcance todo lo que esté en la indentación recién definida. Los identificadores que introducen un nuevo alcance son \inlinecode{where}, \inlinecode{let}, \inlinecode{with} y \inlinecode{of}.
+Utilizamos la herramienta \emph{Alex} \cite{alex} para la generación del analizador léxico.
+
+Se listan identificadores reservados para que reconozca el analizador léxico y se especifica algunos que introducen un nuevo alcance, éstos \emph{esperan} una indentación mayor a la usada anteriormente y de ahí en adelante se considera el mismo alcance todo lo que esté en la indentación recién definida. Los identificadores que introducen un nuevo alcance son \inlinecode{where}, \inlinecode{let}, \inlinecode{with} y \inlinecode{of}.
 
 Se reportan errores por caracteres literales inválidos y comentarios de bloque que no fueron cerrados. También se generan advertencias cuando el código contiene tabuladores (\emph{tabs}), pues pueden considerarse una mala práctica cuando la indentación afecta un programa.
 
-Los comentarios anidados se llevarón a cabo manteniendo una pila de estados del lexer, donde al conseguir un \inlinecode{\{-}, sin importar qué estado esté en el tope la pila, se empila un estado indicando que está en un comentario, y al conseguir un \inlinecode{-\}} con un estado de comentario en el tope, se desempila éste.
+Los comentarios anidados se llevarón a cabo manteniendo una pila de estados del analizador léxico, donde al conseguir un \inlinecode{\{-}, sin importar qué estado esté en el tope la pila, se empila un estado indicando que está en un comentario, y al conseguir un \inlinecode{-\}} con un estado de comentario en el tope, se desempila éste.
 
 Tomamos de GHC la idea de que una línea con indentación mayor a la anterior indica que se debe tomar como la misma línea. Un ejemplo donde se refleja el funcionamiento; no es código válido para el lenguaje:
 
@@ -360,7 +366,7 @@ top3
         <eof>   indica el final del archivo
     -}
 
-    La salida del lexer:
+    La salida del analizador léxico:
     {^
         top1 where {^
             scope1 ^;
@@ -450,45 +456,54 @@ Como podemos ver, se obtiene un grafo de precedencia lineal, ya que en nuestro l
 
 {   % for \overp and \_ to only exist here
 \newcommand{\overp}[1]{\overset{#1}{p}}
+\renewcommand{\emph}[1]{\textbf{\textit{#1}}}
 \renewcommand{\_}{\:\:}
 
-\begin{equation*}
-\begin{split}
-expr ::=& \left( \bigvee \_ \hat{p} \_ \cdotp \_
-                 \text{$p$ es un nivel de precedencia} \right) \_
-        | \_ closed^{+}
+\begin{align*}
+expr ::=
+    & \left( \bigvee \_ \hat{p} \_ \cdotp \_
+        \text{$p$ es un nivel de precedencia} \right) \_
+    | \_ closed^{+}
 \\
-\hat{p} ::=& \_ \overp{\uparrow} \_ op_p^{infixN} \_ \overp{\uparrow} \\
-          |& \_ \overp{\rightarrow}^{+} \_ \overp{\uparrow} \\
-          |& \_ \overp{\uparrow}\quad \overp{\leftarrow}^{+}
+\hat{p} ::=
+     & \_ \overp{\uparrow} \_ op_p^{infixN} \_ \overp{\uparrow} \\
+    |& \_ \overp{\rightarrow}^{+} \_ \overp{\uparrow} \\
+    |& \_ \overp{\uparrow}\quad \overp{\leftarrow}^{+}
 \\
-\overp{\rightarrow} ::=& \_ op_p^{prefix} \_
-                       | \_ \overp{\uparrow} \_ op_p^{infixR}
+\overp{\rightarrow} ::=
+    & \_ op_p^{prefix} \_
+    | \_ \overp{\uparrow} \_ op_p^{infixR}
 \\
-\overp{\leftarrow} ::=& \_ op_p^{postfix} \_
-                      | \_ \overp{\uparrow} \_ op_p^{infixL}
+\overp{\leftarrow} ::=
+    & \_ op_p^{postfix} \_
+    | \_ \overp{\uparrow} \_ op_p^{infixL}
 \\
-\overp{\uparrow} ::=& \left( \bigvee \hat{q} \_ \cdotp \_
-                             p \_ \textless \_ q \right) \_
-                    | \_ closed^{+}
+\overp{\uparrow} ::=
+    & \left( \bigvee \hat{q} \_ \cdotp \_ p \_ < \_ q \right) \_
+    | \_ closed^{+}
 \\
-closed ::=& \left<identificador\right> \_
-          | \_ \boldsymbol{(} expr \boldsymbol{)} \_
-          | \left( \bigvee \_ op_p^{closed} \right)
+closed ::=
+    & \left<identificador\right> \_
+    | \_ \boldsymbol{(} expr \boldsymbol{)} \_
+    | \left( \bigvee \_ op_p^{closed} \right)
 \\
-op_p^{asoc} ::=& \left( \bigvee n_1\ expr\ n_2\ expr\ \cdots\ n_k \_ \cdotp \_
-                        \parbox{0.3\textwidth}{\footnotesize$n_1,\ldots,n_k$ son las partes de un operador en el nivel $p$ con la asociatividad $asoc$} \right)
-\end{split}
-\end{equation*}
+op_p^{\emph{asoc}} ::=
+    & \left( \bigvee n_1\ expr\ n_2\ expr\ \cdots\ n_k \_ \cdotp \_
+        \parbox{0.3\textwidth}{\footnotesize$n_1,\ldots,n_k$ son las partes de un operador en el nivel $p$ con la asociatividad $asoc$} \right)
+\\
+\emph{p}^{+} ::=
+    & \_ \emph{p}
+    | \_ \emph{p}^{+} \_ \emph{p} \_
+\end{align*}
 \captionof{figure}{Gramática de precedencia de operadores basada en \cite{parsing-mixfix-operators}}
 \label{fig:mixfix-grammar}
 }
 \end{investigationfr}
 
 \begin{implementationfr}
-En nuestra implementación del parser de operadores mixfijos, no construímos un grafo sino una \emph{lista de niveles de precedencia}, ya que la precedencia entre operadores no es asignada entre dos operadores únicamente, sino que se asigna un valor para comparación con todos los otros operadores presentes.
+En nuestra implementación del analizador sintáctico de operadores mixfijos, no construímos un grafo sino una \emph{lista de niveles de precedencia}, ya que la precedencia entre operadores no es asignada entre dos operadores únicamente, sino que se asigna un valor para comparación con todos los otros operadores presentes.
 
-Utilizamos \emph{Megaparsec}, una librería de \emph{combinadores de parsers} \cite{megaparsec}, y a partir de la lista de precedencias y la gramática \ref{fig:mixfix-grammar}, se genera un parser que \emph{reorganiza las expresiones en una lista de expresiones} y las analiza recursivamente. En un princpio el parser resultante podía ser muy lento si habían muchas definiciones de operadores en el programa, así que se hace un análisis previo del nivel de la lista de expresiones para incluir únicamente operadores que \emph{alguna de sus partes} esté en ésta, y se analiza antes de cada nivel para incluir los operadores adecuados por separado; logrando así unos resultados de tiempo aceptables.
+Utilizamos \emph{Megaparsec}, una librería de \emph{combinadores de analizador sintácticos} \cite{megaparsec}, y a partir de la lista de precedencias y la gramática \ref{fig:mixfix-grammar}, se genera un analizador sintáctico que \emph{reorganiza las expresiones en una lista de expresiones} y las analiza recursivamente. En un princpio el analizador sintáctico resultante podía ser muy lento si habían muchas definiciones de operadores en el programa, así que se hace un análisis previo del nivel de la lista de expresiones para incluir únicamente operadores que \emph{alguna de sus partes} esté en ésta, y se analiza antes de cada nivel para incluir los operadores adecuados por separado; logrando así unos resultados de tiempo aceptables.
 \end{implementationfr}
 
 \section{Clases de tipos, tipos y constructores azucarados}
