Changed encoding from OT1 to T1

--- a/usb-book/tesis.tex
+++ b/usb-book/tesis.tex
@@ -3,6 +3,7 @@
 % Paquetes para idioma
 \usepackage{babel}
 \usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
 
 % Otros paquetes instalados
 % Básicos
