--- a/usb-book/tesis.tex
+++ b/usb-book/tesis.tex
@@ -107,10 +107,11 @@
 % code and mathematics
 \lstdefinelanguage{angler}{
     % add these letters as possible parts of keywords
-    alsoletter={:, \\, =, -, >, \_, ., (, ), \{, \}},
+    alsoletter={:, \\, =, -, >, \_, ., \{, \}},
     % list of keywords
     morekeywords={
-        export, import, as, open, reopen, closed, with,
+        module, exports, import, as,
+        open, reopen, closed, with,
         where, let, in, case, of,
         forall, exists, select,
         behaviour, on, defines, is, scope,
