Changed the way we print heads in pages and changed file names

--- a/usb-book/partes/apendiceA.tex
+++ b/usb-book/partes/apendiceA.tex
@@ -1,8 +1,6 @@
-\def\chapterTitle{@nombreApendice\xspace}
-
-\chapter{\chapterTitle}
-\label{apendiceA}
-\lhead{Apéndice A. \emph{\chapterTitle}}
+\chapter{@nombreApendice}
+\label{ad:A}
+\lhead{Apéndice A. \emph{\nameref{ad:A}}}
 
 % En los apéndices se incluye cualquier información que no sea esencial para la
 % comprensión básica del trabajo, pero provea ejemplos y casos de estudio
