--- a/usb-book/partes/desarrollo.tex
+++ b/usb-book/partes/desarrollo.tex
@@ -1,8 +1,6 @@
-\def\chapterTitle{Desarrollo\xspace}
-
-\chapter{\chapterTitle}
+\chapter{Desarrollo}
 \label{ch:development}
-\lhead{Capítulo 4. \emph{\chapterTitle}}
+\lhead{Capítulo \getcurrentref{chapter}. \emph{\nameref{ch:development}}}
 
 {   % for \investigationfr, \designfr and \implementationfr to only exists here
 \newenvironment{investigationfr}[1][]
