--- a/usb-book/partes/marco-teorico.tex
+++ b/usb-book/partes/marco-teorico.tex
@@ -1,8 +1,6 @@
-\def\chapterTitle{Marco Teórico\xspace}
-
-\chapter{\chapterTitle}
-\label{capitulo1}
-\lhead{Capítulo 1. \emph{\chapterTitle}}
+\chapter{Marco Teórico}
+\label{ch:marco-teorico}
+\lhead{Capítulo \getcurrentref{chapter}. \emph{\nameref{ch:marco-teorico}}}
 
 % De qué va a tratar el capítulo
 % El capítulo 1 suele ser el marco teórico.
@@ -118,4 +116,4 @@ instancia2          &        50/70 &    12 &       32.7 \\
 \Phi = (\forall x) (R x)
 \end{equation}
 
-En el Apéndice \ref{apendiceA} se encuentra.
+En el Apéndice \ref{ad:A} se encuentra.
