--- a/usb-book/bibliografia.bib
+++ b/usb-book/bibliografia.bib
@@ -8,7 +8,7 @@
     pages = {80-99}
 }
 
-@software{python-parser,
+@online{python-parser,
     author = {Bernard James Pope},
     title = {language-python},
     version = {0.5.2},
@@ -18,7 +18,7 @@
     howpublised = {\url{https://hackage.haskell.org/package/language-python}}
 }
 
-@software{ghc,
+@online{ghc,
     author = {Kevin Hammond},
     title = {GHC},
     version = {7.10.2},
@@ -28,7 +28,7 @@
     howpublised = {\url{https://github.com/ghc/ghc}}
 }
 
-@software{alex,
+@online{alex,
     author = {Simon Marlow and Chris Dornan},
     title = {Alex},
     version = {3.1.7},
@@ -38,7 +38,7 @@
     howpublised = {\url{http://hackage.haskell.org/package/alex}}
 }
 
-@software{happy,
+@online{happy,
     author = {Simon Marlow and Andy Gill},
     title = {Happy},
     version = {1.19.5},
@@ -48,7 +48,7 @@
     howpublised = {\url{http://hackage.haskell.org/package/happy}}
 }
 
-@software{megaparsec,
+@online{megaparsec,
     author = {Mark Karpov},
     title = {Megaparsec},
     version = {4.3},
@@ -66,7 +66,7 @@
     urldate = {2016-02-04}
 }
 
-@software{agda,
+@online{agda,
     author = {Ulf Norell},
     title = {Agda},
     version = {2.4.2},
