--- a/usb-book/partes/apendiceB.tex
+++ b/usb-book/partes/apendiceB.tex
@@ -1,7 +1,5 @@
-\def\chapterTitle{@nombreApendice\xspace}
-
-\chapter{\chapterTitle}
-\label{apendiceB}
-\lhead{Apéndice B. \emph{\chapterTitle}}
+\chapter{@nombreApendice}
+\label{ad:B}
+\lhead{Bpéndice B. \emph{\nameref{ad:A}}}
 
 \Blindtext
