Mistakes in changes of the last commit

--- a/usb-book/partes/apendiceB.tex
+++ b/usb-book/partes/apendiceB.tex
@@ -1,5 +1,5 @@
 \chapter{@nombreApendice}
 \label{ad:B}
-\lhead{Bpéndice B. \emph{\nameref{ad:A}}}
+\lhead{Apéndice B. \emph{\nameref{ad:A}}}
 
 \Blindtext
