--- a/usb-book/partes/conclusiones.tex
+++ b/usb-book/partes/conclusiones.tex
@@ -1,6 +1,6 @@
 \chapter{Conclusiones y Recomendaciones}
-\label{conclusiones}
-\lhead{\emph{Conclusiones y Recomendaciones}}
+\label{ch:conclusions}
+\lhead{\emph{\nameref{ch:conclusions}}}
 
 \Blindtext
 
