Changed once again the formatting of boxes

--- a/usb-book/partes/desarrollo.tex
+++ b/usb-book/partes/desarrollo.tex
@@ -13,13 +13,13 @@
     {\begin{coloredframe}[#1]{Implementación}{crimson}}
     {\end{coloredframe}}
 
-\begin{investigationfr}[frametitlerule=false]
+\begin{investigationfr}
 \end{investigationfr}
 
-\begin{designfr}[frametitlerule=false]
+\begin{designfr}
 \end{designfr}
 
-\begin{implementationfr}[frametitlerule=false]
+\begin{implementationfr}
 \end{implementationfr}
 
 \section{Ideas iniciales}
